imported scroll magic

--- a/index.html
+++ b/index.html
@@ -8,14 +8,39 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <link href="https://fonts.googleapis.com/css?family=Flavors" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 
-    This is a promotional website for a food app.
+    <nav>
+        <ul>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">How It Works</a></li>
+            <li><a href="#">Benefits</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </nav>
 
-    <h2>Coming Soon...</h2>
+    <section class="opening">
+        <h1>Opening Section</h1>
+    </section>
 
+    <section class="step1">
+
+    </section>
+
+    <section class="step2">
+
+    </section>
+
+    <footer>
+
+    </footer>
+
+    <script src="node_modules/scrollmagic/scrollmagic/uncompressed/scrollmagic.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
