added some images

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </nav>
 
     <section class="opening">
+        <img class="menu" src="assets/images/menu.png">
+        <img class="drink" src="assets/images/drink.png">
+        <img class="food-plate" src="assets/images/food-plate.png">
         <h1>Opening Section</h1>
     </section>
 
